Fix to make thing align properly

--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -330,7 +330,7 @@
 .send-input-form {
   .inline-block-mixin;
 
-  width: 85%;
+  width: 82%;
 }
 
 // .send-address-amount {
